<resources>
    <string name="app_name">joiin the club</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="load_percent">load percent</string>
    <string name="title_activity_create_acount">Create Acount</string>
    <string name="title_activity_search_main">SearchMain</string>
    <string name="title_activity_group_main">GroupMain</string>
    <string name="title_activity_setting_main">SettingMain</string>
    <string name="title_activity_user_profile_main">UserProfileMain</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="log_in_logo">log in logo</string>
    <string name="profile">Profile</string>
    <string name="club">Club</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="title_activity_search_text">search_text</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_search_test">SearchTest</string>
    <string name="title_activity_m">activity_m</string>
    <string name="edict">Edict</string>
    <string name="title_activity_card_view">cardView</string>
    <string name="group_profile_pic">group profile pic</string>
    <string name="close_icon">close icon</string>
    <string name="group_name">Group Name</string>
</resources>
